--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,20 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	/*
+	32 ~ 37 querydsl 설정
+	build 와 Entity 생성 후 컴파일
+ 	Gradle - Tasks - build - clean
+ 	Gradle - Tasks - other - compileJava
+	 */
+	implementation "com.querydsl:querydsl-jpa"
+	implementation "com.querydsl:querydsl-core"
+	implementation "com.querydsl:querydsl-collections"
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응 코드
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -29,4 +43,22 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// 49~64 querydsl 설정
+def generated = 'src/main/generated'
+
+/* querydsl QClass 파일 생성 위치를 지정 */
+tasks.withType(JavaCompile) {
+	options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+/* java source set 에 querydsl QClass 위치 추가 */
+sourceSets {
+	main.java.srcDirs += [ generated ]
+}
+
+/* gradle clean 시에 QClass 디렉토리 삭제 */
+clean {
+	delete file(generated)
 }
